Fixed gap between navbar and searchbar

--- a/assets/stylesheets/timetable.css
+++ b/assets/stylesheets/timetable.css
@@ -7,7 +7,7 @@
 	text-shadow:none !important
 }
 
-body {padding-top:56px;}
+body {padding-top:61px;}
 
 .selected-semester-li {background-color:#ccf;}
 
